# allium

./: .gitignore  ELICITATION.md  PATTERNS.md  README.md  REVERSE_ENGINEERING.md  SKILL.md  TODO.md  _config.yml  about.md  distillation.md  elicitation.md  index.md  installation.md  language.md  patterns.md  usage.md
eval/results/2026-05-17T17-39-02-497Z/propagate/experimental/pytest+hypothesis/insurance-claims/sample-2/workdir/: pyproject.toml
eval/results/2026-05-17T17-39-02-497Z/propagate/experimental/pytest+hypothesis/insurance-claims/sample-2/workdir/allium-propagated/: merged.json  propagation-report.md
eval/results/2026-05-17T17-39-02-497Z/propagate/experimental/pytest+hypothesis/insurance-claims/sample-2/workdir/tests/: test_approve_claim.py  test_approved_claims_have_completed_assessment.py  test_assessment.py  test_assessment_sla.py  test_assessment_sla_job.py  test_assessment_status.py  test_assessor.py  test_assessor_dispatch.py  test_assessor_service.py  test_auto_ack_after.py  test_auto_acknowledge_job.py  test_auto_approval_scheduler.py  test_auto_approve_max_pence.py  test_auto_close_denied_after.py  test_auto_close_denied_job.py  test_claim.py  test_claim_amount_within_coverage.py  test_claim_status.py  test_complete_assessment.py  test_denied_claims_have_reason.py  test_deny_claim.py  test_incident_report.py  test_link_window.py  test_mark_payout_failed.py  test_mark_payout_paid.py  test_payment_request.py  test_payment_result.py  test_payment_result_status.py  test_payment_service.py  test_payout.py  test_payout_amount_matches_claim.py  (+15 more)
(+976 files in other folders)
